2006-12-05 Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 
	
	* unichrome/via_driver.c: (VIAPreInit):

	Fix the dma2d option setting.

2006-12-05  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_bandwidth.c: (ViaSetPrimaryFIFO):

	Use a more aggressive fifo setting for CLE266 Cx.
	Boosts performance.
	Please report problems with this.
	
2006-12-01  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via.man:
	* unichrome/via_bios.h:
	* unichrome/via_dri.c: (VIADRIScreenInit):
	* unichrome/via_driver.c: (VIAPreInit):
	* unichrome/via_driver.h:

	Remove unused options.
	First pass cleaning up option handling.
	Make most boolean options work as expected;
	(that is, accepting both a "true" and a "false" argument).
	
2006-10-29  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* libxvmc/viaLowLevel.c:
	* libxvmc/viaLowLevelPro.c:
	* unichrome/via_regs.h:

	Via managed to mix up the 2D / 3D engine busy status bits.
	Funny we never noticed this before.

2006-10-24 Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_xvmc.c: (ViaXvMCCreateContext):

	Remove VT3314 (CN700, VM800 etc.) mpeg2 AGP DMA support.

2006-10-11  Xavier Bachelot <xb_ml-at-kelkoo-dot-net>

	reviewed by: Ivor

	* unichrome/via_bios.h:
	* unichrome/via_id.c:
	* unichrome/via_mode.h:
	* unichrome/via_video.c: (DecideOverlaySupport):

	DDR533 memory support and small clean up.
	Fujitsu/Siemens Amilo L7320 pci id (reported by DeNayGo).

2006-10-03 Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>

	* unichrome/via_video.c: (viaPutImage):

	Removed some stray debug messages.
	

2006-10-02  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c: (VIASave), (VIARestore):

	Moved a line to after declarations for picky gcc-2.96,
	tweaked comments and debugging lines.

2006-09-27  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>

	* unichrome/via_memory.c:
